# DINA

./: CMakeLists.txt  LICENSE.md  README.md
MalAppsList/: malappname.txt  malappname14294.txt
PopularAppsList/: apkname.txt
include/jitana/analysis/: call_graph.hpp  data_flow.hpp  intent_flow.hpp  intent_flow_intraprocedural.hpp  intent_flow_string.hpp  monotonic_dataflow.hpp
include/jitana/mpi/: intent_graph.hpp  mpi.hpp  parse_COVERT.hpp  parse_source_sink_list.hpp  reana.hpp  traverse_branch_node.hpp  travis.hpp
include/jitana/mpi/db/: cc.properties  ic3_truncate.sql
include/jitana/vm_core/: access_flags.hpp
include/jitana/vm_graph/: class_graph.hpp  graph_common.hpp  graphviz.hpp  method_graph.hpp  method_graph_old.hpp
tools/CollectiveAnalysis/: CMakeLists.txt  README.md  main.cpp
tools/CollectiveAnalysis/scripts/: launch
tools/IncrementalAnalysis/: CMakeLists.txt  README.md  main.cpp
tools/IncrementalAnalysis/scripts/: jdwp  launch  names.txt  pull-apks  pull-odex
tools/IncrementalAnalysis/scripts/input/: AnalyzedApps.txt  Apps_Under_Analysis.txt  VirusShareApps.txt  VirusShare_list.csv  all_popular_apps.txt  appNames.txt  appsSendInt.txt  popular100.txt  popular20.txt
tools/IncrementalAnalysis/scripts/input/matchedComponents/: ExtremeDevelopers.NeedforDrift.txt  (+3008 more)
tools/VulAnalysis/: CMakeLists.txt  main.cpp
tools/VulAnalysis/scripts/: analyze_all_apps_VS  autoVulnPathAnalysis.sh  launch
tools/VulAnalysis/scripts/input/: SourceSinkFilter.txt  SourceSinkFilter_Org.txt  SourcesAndSinks.txt  classes.txt  classes_sink.txt  source_classes.txt
